<resources>
    <string name="app_name">TodoApp</string>
    <string name="action_calendar_view">Move to Calendar</string>
    <string name="action_incoming_tasks_view">Move to Incoming Tasks View</string>
    <string name="action_not_completed_view">Move to Not Completed</string>
    <string name="action_completed_view">Move to Completed</string>

    <string name="today_tasks_fragment_label">TODOs</string>
    <string name="calendar_fragment_label">Calendar</string>
    <string name="add_todo_fragment_label">Add new TODO</string>
    <string name="edit_todo_fragment_label">Edit TODO task</string>
    <string name="completed_fragment_label">Not Completed Tasks</string>
    <string name="not_completed_fragment_label">Completed - Archive</string>
    <string name="incoming_tasks_label">Incoming TODOs</string>

    <string name="next">Move to Calendar</string>
    <string name="previous">Back</string>
    <string name="input_desc">Description</string>
    <string name="input_input_due_date">Due date</string>
    <string name="input_repetition">Repeat</string>
    <string name="enable_repeat">No/Yes</string>
    <string name="addNewTodo">Add Task</string>
    <string name="updateTodo">Update Task</string>
    <string name="deleteTodo">Delete Task</string>
    <string name="repeatInfoText">Day/days</string>
    <string name="todoIsDoneViewHeader">Done</string>
    <string name="todoRepetitionViewHeader">Repeat</string>
    <string name="todoDueDateViewHeader">Due Date</string>
    <string name="todoDescriptionViewHeader">Description</string>
    <string name="incomingTasksTextView">Show tasks for next : </string>
    <string name="searchTasksForIncoming">Search</string>


</resources>